# ted-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml
cloudflare/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.toml
cloudflare/src/: index.ts  nuts_codes.ts
ted_mcp/: __init__.py  models.py  nuts_codes.py  server.py  ted_client.py
