[project]
name = "ted-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=1.0.0", "httpx>=0.27.0", "pydantic>=2.0"]

[project.scripts]
ted-mcp = "ted_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ted_mcp"]
